# cookiecutters

./: .pre-commit-config.yaml  LICENSE-MIT.txt  README.md
bevy/: cookiecutter.json
bevy/hooks/: post_gen_project
bevy/{{cookiecutter.project_name}}/: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE-APACHE.txt  README.md  clippy.toml  justfile  setup-dev-environment
bevy/{{cookiecutter.project_name}}/.cargo/: config.toml
bevy/{{cookiecutter.project_name}}/.github/workflows/: ci.yml
bevy/{{cookiecutter.project_name}}/.zed/: settings.json  tasks.json
bevy/{{cookiecutter.project_name}}/src/: bevy_util.rs  camera.rs  lib.rs  main.rs  numeric_conversions.rs  physics.rs  util.rs
general/: .pre-commit-config.yaml  LICENSE-MIT.txt  README.md
nx/: cookiecutter.json
nx/hooks/: post_gen_project  pre_gen_project
nx/{{cookiecutter.project_name}}/: nx.merge.json  package.merge.json
rust/: cookiecutter.json
rust-lib/: cookiecutter.json
rust-lib/{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE.txt  release.toml
rust-lib/{{cookiecutter.project_name}}/.github/workflows/: ci.yml  clippy.yml
rust/hooks/: post_gen_project
rust/{{cookiecutter.project_name}}/: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE-MIT.txt  clippy.toml  justfile  release.toml
rust/{{cookiecutter.project_name}}/.github/workflows/: audit.yml  ci.yml  clippy.yml  commitlint.yml  test.yml
ts/: .pre-commit-config.yaml
ts/hooks/: post_gen_project
ts/{{cookiecutter.project_name}}/: .commitlintrc.json  .eslintrc  .gitattributes  .gitignore  .pre-commit-config.yaml  package.json  setup-dev-environment  tsconfig.base.json  tsconfig.json
(+4 files in other folders)
