[package]
name = "{{ cookiecutter.project_name }}"
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]
version = "0.0.0"
edition = "2024"
description = "{{ cookiecutter.description }}"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "warn"
